--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial;
     line-height: 1.6;
     background-color: white;
     background-color: rgba(88, 176, 54, 0.08); /* Cor com 8% de transparência */
@@ -28,8 +28,8 @@ header {
 }
 
 .logo {
-    height: 4vw;
-    width: 16vw;
+    height: 5vw;
+    width: 17vw;
 }
 
 nav {
@@ -157,6 +157,7 @@ section {
 .section-title {
     text-align: center;
     margin-bottom: 20px;
+    padding: 23px;
     font-size: 28px;
     color: #ffffff;
 }
@@ -195,12 +196,12 @@ section {
 
 #pontopositivo {
     color: #00C71E;
-    font-family: "Noto Serif", serif;
+    font-family: Arial;
 }
 
 #pontonegativo {
     color: #AE0000;
-    font-family: "Noto Serif", serif;
+    font-family: Arial;
 }
 
 .linha {
@@ -218,7 +219,7 @@ section {
     font-size: 19px;
     width: 35rem;
     text-align: justify;
-    font-family: "Noto Serif", serif;
+    font-family: Arial;
 }
 
 .text {
